# tasc

./: .gitignore  README.md  pyproject.toml
data/nba/: readme.md
src/: .gitignore  __init__.py  synthetic_control.py
src/genData/: Sine.py  __init__.py  cricket.py  nba.py
test/: basque.ipynb  nba.ipynb  prop99.ipynb
test/aistats_exp0/: exp0.py
test/aistats_exp0/logs/: exp0_plot.ipynb
test/aistats_exp1/: exp1.ipynb  exp1.py  exp1_1.py
test/aistats_exp1/logs/: exp1_permutation.ipynb  exp1_plot.ipynb
test/aistats_exp2/: exp2.py  exp2_1.py  exp2_2.py
test/aistats_exp2/logs/: exp2_2_plot.ipynb  exp2_plot.ipynb
test/aistats_exp3/: exp3.py
test/aistats_exp3/logs/: exp3_plot.ipynb
test/cricket_aistats_final/: cricket_aistats_final_plot.ipynb  cricket_aistats_final_run_tests.py
test/nba_aistats_final/: nba_aistats_final_plot.ipynb  nba_aistats_final_run_tests.py
test/prop99_aistats_final/: prop99_aistats_final_plot.ipynb  prop99_aistats_final_run_tests.py
